Split home into manual and add biy page

--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -37,7 +37,7 @@ import { ViewTransitions } from 'astro:transitions'
 
   <body class="min-h-screen max-w-3xl mx-auto px-3 sm:px-8">
     <Header transition:persist />
-    <main id="main">
+    <main id="main" class="content-center grid">
       <slot name="main" />
     </main>
     <Footer />
