--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,7 +13,7 @@ import DarkModeToggle from './DarkModeToggle.astro'
   <nav>
     <section class="text-text-bold">
       <ul class="unset flex gap-4 [&>li]:p-0">
-        <li><HeaderLink href="/">Home</HeaderLink></li>
+        <li><HeaderLink href="/manual">Manual</HeaderLink></li>
         <li><HeaderLink href="/games">Games</HeaderLink></li>
         <li><HeaderLink href="/blog">Blog</HeaderLink></li>
         <li><HeaderLink href="/buy">Buy</HeaderLink></li>
