--- a/src/components/BuyBanner.astro
+++ b/src/components/BuyBanner.astro
@@ -21,7 +21,7 @@
   </h5>
 
   <div class="mb-3 font-normal text-gray-700 dark:text-gray-400 text-balance">
-    Get your copy of the DIY Multideck manual and start playing your favorite
+    Get your copy of the DIY Multideck and start playing your favorite
     games with your friends and family.
   </div>
 
