--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ import { SITE_TITLE } from '../config'
       </span>
     </h1>
 
-    <div class="grid sm:grid-cols-2 gap-8 mb-8">
+    <div class="grid sm:grid-cols-2 gap-4 my-4">
       <a
         href="/manual"
         class="unset group relative overflow-hidden p-6 bg-white border border-gray-200 rounded-2xl shadow-lg dark:bg-gray-800 dark:border-gray-700"
