--- a/src/components/BuyBanner.astro
+++ b/src/components/BuyBanner.astro
@@ -1,10 +1,18 @@
 ---
+import type { HTMLAttributes } from 'astro/types'
 
+interface Props extends HTMLAttributes<'a'> {}
+
+const { class: className, ...attrs } = Astro.props
 ---
 
 <a
   href="/buy"
-  class="unset group relative overflow-hidden p-6 bg-white border border-gray-200 rounded-2xl shadow-lg dark:bg-gray-800 dark:border-gray-700"
+  {...attrs}
+  class:list={[
+    'unset group block relative overflow-hidden p-6 bg-white border border-gray-200 rounded-2xl shadow-lg dark:bg-gray-800 dark:border-gray-700',
+    className,
+  ]}
 >
   <i
     class="ti ti-shopping-cart text-[10rem] absolute -right-4 -bottom-4 text-black/5 dark:text-white/5"
@@ -21,8 +29,8 @@
   </h5>
 
   <div class="mb-3 font-normal text-gray-700 dark:text-gray-400 text-balance">
-    Get your copy of the DIY Multideck and start playing your favorite
-    games with your friends and family.
+    Get your copy of the DIY Multideck and start playing your favorite games
+    with your friends and family.
   </div>
 
   <div
