--- a/src/components/BuyBanner.astro
+++ b/src/components/BuyBanner.astro
@@ -1,55 +1,18 @@
 ---
-import type { HTMLAttributes } from 'astro/types'
+import LinkCard from './LinkCard.astro'
 
-interface Props extends HTMLAttributes<'a'> {}
+interface Props {
+  class?: string
+}
 
-const { class: className, ...attrs } = Astro.props
+const { class: className } = Astro.props
 ---
 
-<a
+<LinkCard
   href="/buy"
-  {...attrs}
-  class:list={[
-    'unset group block relative overflow-hidden p-6 bg-white border border-gray-200 rounded-2xl shadow-lg dark:bg-gray-800 dark:border-gray-700',
-    className,
-  ]}
->
-  <i
-    class="ti ti-shopping-cart text-[10rem] absolute -right-4 -bottom-4 text-black/5 dark:text-white/5"
-  ></i>
-  <h5
-    class="mb-2
-          text-2xl
-          font-bold
-          tracking-tight
-          text-gray-900
-          dark:text-white"
-  >
-    Buy the DIY Multideck
-  </h5>
-
-  <div class="mb-3 font-normal text-gray-700 dark:text-gray-400 text-balance">
-    Get your copy of the DIY Multideck and start playing your favorite games
-    with your friends and family.
-  </div>
-
-  <div
-    class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-full group-hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:group-hover:bg-blue-700 dark:focus:ring-blue-800"
-  >
-    Buy now
-    <svg
-      class="rtl:rotate-180 w-3.5 h-3.5 ms-2"
-      aria-hidden="true"
-      xmlns="http://www.w3.org/2000/svg"
-      fill="none"
-      viewBox="0 0 14 10"
-    >
-      <path
-        stroke="currentColor"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        stroke-width="2"
-        d="M1 5h12m0 0L9 1m4 4L9 9"></path>
-    </svg>
-  </div>
-</a>
+  title="Buy the DIY Multideck"
+  description="Get your copy of the DIY Multideck and start playing your favorite games with your friends and family."
+  cta="Buy now"
+  icon="shopping-cart"
+  class={className}
+/>
