--- a/src/pages/manual.astro
+++ b/src/pages/manual.astro
@@ -5,17 +5,20 @@ import BuyBanner from '../components/BuyBanner.astro'
 import { SITE_TITLE } from '../config'
 import { getEntry } from 'astro:content'
 import Title from '../components/Title.astro'
+import TableOfContents from '../components/TableOfContents.astro'
 
 const entry = await getEntry('pages', 'manual')
 
-const { Content } = await entry.render()
+const { Content, headings } = await entry.render()
 ---
 
-<PageLayout hasProse>
+<PageLayout hasProse withToc>
   <PageMeta
     title={`${SITE_TITLE} | A game system to play hundreds of board games`}
     slot="meta"
   />
+
+  <TableOfContents slot="toc" headings={headings} />
 
   <Fragment slot="main">
     <Title text={['The', 'DIY Multideck']} />
