Fix toc light theme

--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -53,7 +53,7 @@ const { classes: classNames, hasProse, tocHeadings } = Astro.props
         <aside
           class:list={[
             'unset not-prose w-64 pt-8 grid-in-[toc] fixed top-0 left-0 right-0 h-full overflow-y-auto',
-            'hidden lg:block p-4 border-r border-white/10 bg-black/20',
+            'hidden lg:block p-4 border-r border-stone-200 dark:border-white/10 bg-stone-50 dark:bg-black/20',
           ]}
         >
           <div class="font-lg font-bold mb-2">Table of content</div>
