--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,14 +8,14 @@ interface Props extends HTMLAttributes<'header'> {}
 const { class: className, ...attrs } = Astro.props
 ---
 
-<header {...attrs} class:list={[className]}>
+<header {...attrs} class:list={['flex items-center', className]}>
   <a
     class="unset absolute z-10 left-[50%] -top-[100rem] translate-x-[-50%] bg-white text-black px-8 py-2 focus:top-[initial]"
     href="#main"
   >
     Skip to content
   </a>
-  <nav>
+  <nav class="grow">
     <section class="text-text-bold">
       <ul class="unset flex gap-4 [&>li]:p-0">
         <li><HeaderLink href="/manual">Manual</HeaderLink></li>
@@ -53,14 +53,3 @@ const { class: className, ...attrs } = Astro.props
   </div>
   <DarkModeToggle transition:persist />
 </header>
-<style>
-  header {
-    grid-area: header;
-    display: grid;
-    align-items: center;
-    grid-template-columns: minmax(0, 1fr) minmax(0, max-content) minmax(
-        0,
-        max-content
-      );
-  }
-</style>
