--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -56,7 +56,7 @@ const { classes: classNames, hasProse, tocHeadings } = Astro.props
             'hidden lg:block p-4 border-r border-stone-200 dark:border-white/10 bg-stone-50 dark:bg-black/20',
           ]}
         >
-          <div class="font-lg font-bold mb-2">Table of content</div>
+          <div class="text-md font-bold mb-2">Table of contents</div>
           <TableOfContents headings={tocHeadings} />
         </aside>
       )
