Add coin flip icon

--- a/src/components/markdown/Suit.astro
+++ b/src/components/markdown/Suit.astro
@@ -51,7 +51,7 @@ const suitId =
   suitId !== undefined ? (
     <img
       src={`/images/suits/${suitId}.svg`}
-      class="not-prose unset align-middle inline-block pointer-events-none h-[1.25em] w-[1.25em]"
+      class="not-prose unset align-[-0.25em] inline-block pointer-events-none h-[1.25em] w-[1.25em]"
       alt={suitEmojisById[suitId]}
       draggable="false"
     />
