--- a/src/components/markdown/CardDistributionTable.astro
+++ b/src/components/markdown/CardDistributionTable.astro
@@ -1,168 +1,170 @@
 ---
-import Suit from './Suit.astro'
+import type { Props as CoinFlipProps } from './CoinFlip.astro'
+import CoinFlip from './CoinFlip.astro'
 import type { Props as SuitProps } from './Suit.astro'
+import Suit from './Suit.astro'
 
 const rows = [
-  ['🔥', '0', '❤️', '0', '1', '1', '00', '1', '✔️'],
-  ['🔥', '1', '❤️', '1', '1', '1', '01', '1', '✔️'],
-  ['🔥', '2', '❤️', '2', '1', '1', '02', '2', '✔️'],
-  ['🔥', '3', '❤️', '3', '1', '1', '03', '3', '✔️'],
-  ['🔥', '4', '❤️', '4', '1', '1', '04', '2', '✔️'],
-  ['🔥', '5', '❤️', '5', '1', '1', '05', '1', '✔️'],
-  ['🔥', '6', '❤️', '6', '1', '1', '06', '1', '✔️'],
-  ['🔥', '7', '❤️', '7', '1', '1', '07', '2', '✔️'],
-  ['🔥', '8', '❤️', '8', '1', '1', '08', '3', '✔️'],
-  ['🔥', '9', '❤️', '9', '1', '1', '09', '4', '✔️'],
-  ['💧', '0', '💙', '0', '1', '2', '10', '1', '❌'],
-  ['💧', '1', '💙', '1', '1', '2', '11', '1', '❌'],
-  ['💧', '2', '💙', '2', '1', '2', '12', '2', '❌'],
-  ['💧', '3', '💙', '3', '1', '2', '13', '3', '❌'],
-  ['💧', '4', '💙', '4', '1', '2', '14', '2', '❌'],
-  ['💧', '5', '💙', '5', '1', '2', '15', '1', '❌'],
-  ['💧', '6', '💙', '6', '1', '2', '16', '1', '❌'],
-  ['💧', '7', '💙', '7', '1', '2', '17', '2', '❌'],
-  ['💧', '8', '💙', '8', '1', '2', '18', '3', '❌'],
-  ['💧', '9', '💙', '9', '1', '2', '19', '4', '❌'],
-  ['⭐', '0', '💛', '0', '1', '3', '20', '1', '✔️'],
-  ['⭐', '1', '💛', '1', '1', '3', '21', '1', '✔️'],
-  ['⭐', '2', '💛', '2', '1', '3', '22', '2', '✔️'],
-  ['⭐', '3', '💛', '3', '1', '3', '23', '3', '✔️'],
-  ['⭐', '4', '💛', '4', '1', '3', '24', '2', '✔️'],
-  ['⭐', '5', '💛', '5', '1', '3', '25', '1', '✔️'],
-  ['⭐', '6', '💛', '6', '1', '3', '26', '1', '✔️'],
-  ['⭐', '7', '💛', '7', '1', '3', '27', '2', '✔️'],
-  ['⭐', '8', '💛', '8', '1', '3', '28', '3', '✔️'],
-  ['⭐', '9', '💛', '9', '1', '3', '29', '4', '✔️'],
-  ['🍀', '0', '💚', '0', '1', '4', '30', '1', '❌'],
-  ['🍀', '1', '💚', '1', '1', '4', '31', '1', '❌'],
-  ['🍀', '2', '💚', '2', '1', '4', '32', '2', '❌'],
-  ['🍀', '3', '💚', '3', '1', '4', '33', '3', '❌'],
-  ['🍀', '4', '💚', '4', '1', '4', '34', '2', '❌'],
-  ['🍀', '5', '💚', '5', '1', '4', '35', '1', '❌'],
-  ['🍀', '6', '💚', '6', '1', '4', '36', '1', '❌'],
-  ['🍀', '7', '💚', '7', '1', '4', '37', '2', '❌'],
-  ['🍀', '8', '💚', '8', '1', '4', '38', '3', '❌'],
-  ['🍀', '9', '💚', '9', '1', '4', '39', '4', '❌'],
-  ['🍊', '0', '🔴', '0', '2', '1', '40', '1', '✔️'],
-  ['🍊', '1', '🔴', '1', '2', '1', '41', '1', '✔️'],
-  ['🍊', '2', '🔴', '2', '2', '1', '42', '2', '✔️'],
-  ['🍊', '3', '🔴', '3', '2', '1', '43', '3', '✔️'],
-  ['🍊', '4', '🔴', '4', '2', '1', '44', '2', '✔️'],
-  ['🍊', '5', '🔴', '5', '2', '1', '45', '1', '✔️'],
-  ['🍊', '6', '🔴', '6', '2', '1', '46', '1', '✔️'],
-  ['🍊', '7', '🔴', '7', '2', '1', '47', '2', '✔️'],
-  ['🍊', '8', '🔴', '8', '2', '1', '48', '3', '✔️'],
-  ['🍊', '9', '🔴', '9', '2', '1', '49', '4', '✔️'],
-  ['🍆', '0', '🔵', '0', '2', '2', '50', '1', '❌'],
-  ['🍆', '1', '🔵', '1', '2', '2', '51', '1', '❌'],
-  ['🍆', '2', '🔵', '2', '2', '2', '52', '2', '❌'],
-  ['🍆', '3', '🔵', '3', '2', '2', '53', '3', '❌'],
-  ['🍆', '4', '🔵', '4', '2', '2', '54', '2', '❌'],
-  ['🍆', '5', '🔵', '5', '2', '2', '55', '1', '❌'],
-  ['🍆', '6', '🔵', '6', '2', '2', '56', '1', '❌'],
-  ['🍆', '7', '🔵', '7', '2', '2', '57', '2', '❌'],
-  ['🍆', '8', '🔵', '8', '2', '2', '58', '3', '❌'],
-  ['🍆', '9', '🔵', '9', '2', '2', '59', '4', '❌'],
-  ['💭', '0', '🟡', '0', '2', '3', '60', '1', '✔️'],
-  ['💭', '1', '🟡', '1', '2', '3', '61', '1', '✔️'],
-  ['💭', '2', '🟡', '2', '2', '3', '62', '2', '✔️'],
-  ['💭', '3', '🟡', '3', '2', '3', '63', '3', '✔️'],
-  ['💭', '4', '🟡', '4', '2', '3', '64', '2', '✔️'],
-  ['💭', '5', '🟡', '5', '2', '3', '65', '1', '✔️'],
-  ['💭', '6', '🟡', '6', '2', '3', '66', '1', '✔️'],
-  ['💭', '7', '🟡', '7', '2', '3', '67', '2', '✔️'],
-  ['💭', '8', '🟡', '8', '2', '3', '68', '3', '✔️'],
-  ['💭', '9', '🟡', '9', '2', '3', '69', '4', '✔️'],
-  ['🕷️', '0', '🟢', '0', '2', '4', '70', '1', '❌'],
-  ['🕷️', '1', '🟢', '1', '2', '4', '71', '1', '❌'],
-  ['🕷️', '2', '🟢', '2', '2', '4', '72', '2', '❌'],
-  ['🕷️', '3', '🟢', '3', '2', '4', '73', '3', '❌'],
-  ['🕷️', '4', '🟢', '4', '2', '4', '74', '2', '❌'],
-  ['🕷️', '5', '🟢', '5', '2', '4', '75', '1', '❌'],
-  ['🕷️', '6', '🟢', '6', '2', '4', '76', '1', '❌'],
-  ['🕷️', '7', '🟢', '7', '2', '4', '77', '2', '❌'],
-  ['🕷️', '8', '🟢', '8', '2', '4', '78', '3', '❌'],
-  ['🕷️', '9', '🟢', '9', '2', '4', '79', '4', '❌'],
-  ['🌸', '0', '🟥', '0', '3', '1', '80', '1', '❓'],
-  ['🌸', '1', '🟥', '1', '3', '1', '81', '1', '❓'],
-  ['🌸', '2', '🟥', '2', '3', '1', '82', '2', '❓'],
-  ['🌸', '3', '🟥', '3', '3', '1', '83', '3', '❓'],
-  ['🌸', '4', '🟥', '4', '3', '1', '84', '2', '❓'],
-  ['🌸', '5', '🟥', '5', '3', '1', '85', '1', '❓'],
-  ['🌸', '6', '🟥', '6', '3', '1', '86', '1', '❓'],
-  ['🌸', '7', '🟥', '7', '3', '1', '87', '2', '❓'],
-  ['🌸', '8', '🟥', '8', '3', '1', '88', '3', '❓'],
-  ['🌸', '9', '🟥', '9', '3', '1', '89', '4', '❓'],
-  ['💎', '0', '🟦', '0', '3', '2', '90', '1', '❓'],
-  ['💎', '1', '🟦', '1', '3', '2', '91', '1', '❓'],
-  ['💎', '2', '🟦', '2', '3', '2', '92', '2', '❓'],
-  ['💎', '3', '🟦', '3', '3', '2', '93', '3', '❓'],
-  ['💎', '4', '🟦', '4', '3', '2', '94', '2', '❓'],
-  ['💎', '5', '🟦', '5', '3', '2', '95', '1', '❓'],
-  ['💎', '6', '🟦', '6', '3', '2', '96', '1', '❓'],
-  ['💎', '7', '🟦', '7', '3', '2', '97', '2', '❓'],
-  ['💎', '8', '🟦', '8', '3', '2', '98', '3', '❓'],
-  ['💎', '9', '🟦', '9', '3', '2', '99', '4', '❓'],
-  ['💩', '0', '🟨', '0', '3', '3', '100', '1', '❓'],
-  ['💩', '1', '🟨', '1', '3', '3', '101', '1', '❓'],
-  ['💩', '2', '🟨', '2', '3', '3', '102', '2', '❓'],
-  ['💩', '3', '🟨', '3', '3', '3', '103', '3', '❓'],
-  ['💩', '4', '🟨', '4', '3', '3', '104', '2', '❓'],
-  ['💩', '5', '🟨', '5', '3', '3', '105', '1', '❓'],
-  ['💩', '6', '🟨', '6', '3', '3', '106', '1', '❓'],
-  ['💩', '7', '🟨', '7', '3', '3', '107', '2', '❓'],
-  ['💩', '8', '🟨', '8', '3', '3', '108', '3', '❓'],
-  ['💩', '9', '🟨', '9', '3', '3', '109', '4', '❓'],
-  ['🗿', '0', '🟩', '0', '3', '4', '110', '1', '❓'],
-  ['🗿', '1', '🟩', '1', '3', '4', '111', '1', '❓'],
-  ['🗿', '2', '🟩', '2', '3', '4', '112', '2', '❓'],
-  ['🗿', '3', '🟩', '3', '3', '4', '113', '3', '❓'],
-  ['🗿', '4', '🟩', '4', '3', '4', '114', '2', '❓'],
-  ['🗿', '5', '🟩', '5', '3', '4', '115', '1', '❓'],
-  ['🗿', '6', '🟩', '6', '3', '4', '116', '1', '❓'],
-  ['🗿', '7', '🟩', '7', '3', '4', '117', '2', '❓'],
-  ['🗿', '8', '🟩', '8', '3', '4', '118', '3', '❓'],
-  ['🗿', '9', '🟩', '9', '3', '4', '119', '4', '❓'],
-  ['🔥', 'X', '🖤', '0', '1', '5', '120', '5', '✔️'],
-  ['🔥', 'J', '🖤', '1', '1', '5', '121', '1', '✔️'],
-  ['🔥', 'Q', '🖤', '2', '1', '5', '122', '2', '✔️'],
-  ['🔥', 'K', '🖤', '3', '1', '5', '123', '3', '✔️'],
-  ['🔥', 'A', '🖤', '4', '1', '5', '124', '4', '✔️'],
-  ['🍊', 'X', '🖤', '5', '1', '5', '125', '5', '✔️'],
-  ['🍊', 'J', '🖤', '6', '1', '5', '126', '1', '✔️'],
-  ['🍊', 'Q', '🖤', '7', '1', '5', '127', '2', '✔️'],
-  ['🍊', 'K', '🖤', '8', '1', '5', '128', '3', '✔️'],
-  ['🍊', 'A', '🖤', '9', '1', '5', '129', '4', '✔️'],
-  ['💧', 'X', '⚫️', '0', '2', '5', '130', '5', '❌'],
-  ['💧', 'J', '⚫️', '1', '2', '5', '131', '1', '❌'],
-  ['💧', 'Q', '⚫️', '2', '2', '5', '132', '2', '❌'],
-  ['💧', 'K', '⚫️', '3', '2', '5', '133', '3', '❌'],
-  ['💧', 'A', '⚫️', '4', '2', '5', '134', '4', '❌'],
-  ['🍆', 'X', '⚫️', '5', '2', '5', '135', '5', '❌'],
-  ['🍆', 'J', '⚫️', '6', '2', '5', '136', '1', '❌'],
-  ['🍆', 'Q', '⚫️', '7', '2', '5', '137', '2', '❌'],
-  ['🍆', 'K', '⚫️', '8', '2', '5', '138', '3', '❌'],
-  ['🍆', 'A', '⚫️', '9', '2', '5', '139', '4', '❌'],
-  ['⭐', 'X', '⬛️', '0', '3', '5', '140', '5', '✔️'],
-  ['⭐', 'J', '⬛️', '1', '3', '5', '141', '1', '✔️'],
-  ['⭐', 'Q', '⬛️', '2', '3', '5', '142', '2', '✔️'],
-  ['⭐', 'K', '⬛️', '3', '3', '5', '143', '3', '✔️'],
-  ['⭐', 'A', '⬛️', '4', '3', '5', '144', '4', '✔️'],
-  ['💭', 'X', '⬛️', '5', '3', '5', '145', '5', '✔️'],
-  ['💭', 'J', '⬛️', '6', '3', '5', '146', '1', '✔️'],
-  ['💭', 'Q', '⬛️', '7', '3', '5', '147', '2', '✔️'],
-  ['💭', 'K', '⬛️', '8', '3', '5', '148', '3', '✔️'],
-  ['💭', 'A', '⬛️', '9', '3', '5', '149', '4', '✔️'],
-  ['🍀', 'X', '🌈', '0', '4', '6', '150', '5', '❌'],
-  ['🍀', 'J', '🌈', '1', '4', '6', '151', '1', '❌'],
-  ['🍀', 'Q', '🌈', '2', '4', '6', '152', '2', '❌'],
-  ['🍀', 'K', '🌈', '3', '4', '6', '153', '3', '❌'],
-  ['🍀', 'A', '🌈', '4', '4', '6', '154', '4', '❌'],
-  ['🕷️', 'X', '🌈', '5', '4', '6', '155', '5', '❌'],
-  ['🕷️', 'J', '🌈', '6', '4', '6', '156', '1', '❌'],
-  ['🕷️', 'Q', '🌈', '7', '4', '6', '157', '2', '❌'],
-  ['🕷️', 'K', '🌈', '8', '4', '6', '158', '3', '❌'],
-  ['🕷️', 'A', '🌈', '9', '4', '6', '159', '4', '❌'],
+  ['🔥', '0', '❤️', '0', '1', '1', '00', '1', 'yes'],
+  ['🔥', '1', '❤️', '1', '1', '1', '01', '1', 'yes'],
+  ['🔥', '2', '❤️', '2', '1', '1', '02', '2', 'yes'],
+  ['🔥', '3', '❤️', '3', '1', '1', '03', '3', 'yes'],
+  ['🔥', '4', '❤️', '4', '1', '1', '04', '2', 'yes'],
+  ['🔥', '5', '❤️', '5', '1', '1', '05', '1', 'yes'],
+  ['🔥', '6', '❤️', '6', '1', '1', '06', '1', 'yes'],
+  ['🔥', '7', '❤️', '7', '1', '1', '07', '2', 'yes'],
+  ['🔥', '8', '❤️', '8', '1', '1', '08', '3', 'yes'],
+  ['🔥', '9', '❤️', '9', '1', '1', '09', '4', 'yes'],
+  ['💧', '0', '💙', '0', '1', '2', '10', '1', 'no'],
+  ['💧', '1', '💙', '1', '1', '2', '11', '1', 'no'],
+  ['💧', '2', '💙', '2', '1', '2', '12', '2', 'no'],
+  ['💧', '3', '💙', '3', '1', '2', '13', '3', 'no'],
+  ['💧', '4', '💙', '4', '1', '2', '14', '2', 'no'],
+  ['💧', '5', '💙', '5', '1', '2', '15', '1', 'no'],
+  ['💧', '6', '💙', '6', '1', '2', '16', '1', 'no'],
+  ['💧', '7', '💙', '7', '1', '2', '17', '2', 'no'],
+  ['💧', '8', '💙', '8', '1', '2', '18', '3', 'no'],
+  ['💧', '9', '💙', '9', '1', '2', '19', '4', 'no'],
+  ['⭐', '0', '💛', '0', '1', '3', '20', '1', 'yes'],
+  ['⭐', '1', '💛', '1', '1', '3', '21', '1', 'yes'],
+  ['⭐', '2', '💛', '2', '1', '3', '22', '2', 'yes'],
+  ['⭐', '3', '💛', '3', '1', '3', '23', '3', 'yes'],
+  ['⭐', '4', '💛', '4', '1', '3', '24', '2', 'yes'],
+  ['⭐', '5', '💛', '5', '1', '3', '25', '1', 'yes'],
+  ['⭐', '6', '💛', '6', '1', '3', '26', '1', 'yes'],
+  ['⭐', '7', '💛', '7', '1', '3', '27', '2', 'yes'],
+  ['⭐', '8', '💛', '8', '1', '3', '28', '3', 'yes'],
+  ['⭐', '9', '💛', '9', '1', '3', '29', '4', 'yes'],
+  ['🍀', '0', '💚', '0', '1', '4', '30', '1', 'no'],
+  ['🍀', '1', '💚', '1', '1', '4', '31', '1', 'no'],
+  ['🍀', '2', '💚', '2', '1', '4', '32', '2', 'no'],
+  ['🍀', '3', '💚', '3', '1', '4', '33', '3', 'no'],
+  ['🍀', '4', '💚', '4', '1', '4', '34', '2', 'no'],
+  ['🍀', '5', '💚', '5', '1', '4', '35', '1', 'no'],
+  ['🍀', '6', '💚', '6', '1', '4', '36', '1', 'no'],
+  ['🍀', '7', '💚', '7', '1', '4', '37', '2', 'no'],
+  ['🍀', '8', '💚', '8', '1', '4', '38', '3', 'no'],
+  ['🍀', '9', '💚', '9', '1', '4', '39', '4', 'no'],
+  ['🍊', '0', '🔴', '0', '2', '1', '40', '1', 'yes'],
+  ['🍊', '1', '🔴', '1', '2', '1', '41', '1', 'yes'],
+  ['🍊', '2', '🔴', '2', '2', '1', '42', '2', 'yes'],
+  ['🍊', '3', '🔴', '3', '2', '1', '43', '3', 'yes'],
+  ['🍊', '4', '🔴', '4', '2', '1', '44', '2', 'yes'],
+  ['🍊', '5', '🔴', '5', '2', '1', '45', '1', 'yes'],
+  ['🍊', '6', '🔴', '6', '2', '1', '46', '1', 'yes'],
+  ['🍊', '7', '🔴', '7', '2', '1', '47', '2', 'yes'],
+  ['🍊', '8', '🔴', '8', '2', '1', '48', '3', 'yes'],
+  ['🍊', '9', '🔴', '9', '2', '1', '49', '4', 'yes'],
+  ['🍆', '0', '🔵', '0', '2', '2', '50', '1', 'no'],
+  ['🍆', '1', '🔵', '1', '2', '2', '51', '1', 'no'],
+  ['🍆', '2', '🔵', '2', '2', '2', '52', '2', 'no'],
+  ['🍆', '3', '🔵', '3', '2', '2', '53', '3', 'no'],
+  ['🍆', '4', '🔵', '4', '2', '2', '54', '2', 'no'],
+  ['🍆', '5', '🔵', '5', '2', '2', '55', '1', 'no'],
+  ['🍆', '6', '🔵', '6', '2', '2', '56', '1', 'no'],
+  ['🍆', '7', '🔵', '7', '2', '2', '57', '2', 'no'],
+  ['🍆', '8', '🔵', '8', '2', '2', '58', '3', 'no'],
+  ['🍆', '9', '🔵', '9', '2', '2', '59', '4', 'no'],
+  ['💭', '0', '🟡', '0', '2', '3', '60', '1', 'yes'],
+  ['💭', '1', '🟡', '1', '2', '3', '61', '1', 'yes'],
+  ['💭', '2', '🟡', '2', '2', '3', '62', '2', 'yes'],
+  ['💭', '3', '🟡', '3', '2', '3', '63', '3', 'yes'],
+  ['💭', '4', '🟡', '4', '2', '3', '64', '2', 'yes'],
+  ['💭', '5', '🟡', '5', '2', '3', '65', '1', 'yes'],
+  ['💭', '6', '🟡', '6', '2', '3', '66', '1', 'yes'],
+  ['💭', '7', '🟡', '7', '2', '3', '67', '2', 'yes'],
+  ['💭', '8', '🟡', '8', '2', '3', '68', '3', 'yes'],
+  ['💭', '9', '🟡', '9', '2', '3', '69', '4', 'yes'],
+  ['🕷️', '0', '🟢', '0', '2', '4', '70', '1', 'no'],
+  ['🕷️', '1', '🟢', '1', '2', '4', '71', '1', 'no'],
+  ['🕷️', '2', '🟢', '2', '2', '4', '72', '2', 'no'],
+  ['🕷️', '3', '🟢', '3', '2', '4', '73', '3', 'no'],
+  ['🕷️', '4', '🟢', '4', '2', '4', '74', '2', 'no'],
+  ['🕷️', '5', '🟢', '5', '2', '4', '75', '1', 'no'],
+  ['🕷️', '6', '🟢', '6', '2', '4', '76', '1', 'no'],
+  ['🕷️', '7', '🟢', '7', '2', '4', '77', '2', 'no'],
+  ['🕷️', '8', '🟢', '8', '2', '4', '78', '3', 'no'],
+  ['🕷️', '9', '🟢', '9', '2', '4', '79', '4', 'no'],
+  ['🌸', '0', '🟥', '0', '3', '1', '80', '1', 'unknown'],
+  ['🌸', '1', '🟥', '1', '3', '1', '81', '1', 'unknown'],
+  ['🌸', '2', '🟥', '2', '3', '1', '82', '2', 'unknown'],
+  ['🌸', '3', '🟥', '3', '3', '1', '83', '3', 'unknown'],
+  ['🌸', '4', '🟥', '4', '3', '1', '84', '2', 'unknown'],
+  ['🌸', '5', '🟥', '5', '3', '1', '85', '1', 'unknown'],
+  ['🌸', '6', '🟥', '6', '3', '1', '86', '1', 'unknown'],
+  ['🌸', '7', '🟥', '7', '3', '1', '87', '2', 'unknown'],
+  ['🌸', '8', '🟥', '8', '3', '1', '88', '3', 'unknown'],
+  ['🌸', '9', '🟥', '9', '3', '1', '89', '4', 'unknown'],
+  ['💎', '0', '🟦', '0', '3', '2', '90', '1', 'unknown'],
+  ['💎', '1', '🟦', '1', '3', '2', '91', '1', 'unknown'],
+  ['💎', '2', '🟦', '2', '3', '2', '92', '2', 'unknown'],
+  ['💎', '3', '🟦', '3', '3', '2', '93', '3', 'unknown'],
+  ['💎', '4', '🟦', '4', '3', '2', '94', '2', 'unknown'],
+  ['💎', '5', '🟦', '5', '3', '2', '95', '1', 'unknown'],
+  ['💎', '6', '🟦', '6', '3', '2', '96', '1', 'unknown'],
+  ['💎', '7', '🟦', '7', '3', '2', '97', '2', 'unknown'],
+  ['💎', '8', '🟦', '8', '3', '2', '98', '3', 'unknown'],
+  ['💎', '9', '🟦', '9', '3', '2', '99', '4', 'unknown'],
+  ['💩', '0', '🟨', '0', '3', '3', '100', '1', 'unknown'],
+  ['💩', '1', '🟨', '1', '3', '3', '101', '1', 'unknown'],
+  ['💩', '2', '🟨', '2', '3', '3', '102', '2', 'unknown'],
+  ['💩', '3', '🟨', '3', '3', '3', '103', '3', 'unknown'],
+  ['💩', '4', '🟨', '4', '3', '3', '104', '2', 'unknown'],
+  ['💩', '5', '🟨', '5', '3', '3', '105', '1', 'unknown'],
+  ['💩', '6', '🟨', '6', '3', '3', '106', '1', 'unknown'],
+  ['💩', '7', '🟨', '7', '3', '3', '107', '2', 'unknown'],
+  ['💩', '8', '🟨', '8', '3', '3', '108', '3', 'unknown'],
+  ['💩', '9', '🟨', '9', '3', '3', '109', '4', 'unknown'],
+  ['🗿', '0', '🟩', '0', '3', '4', '110', '1', 'unknown'],
+  ['🗿', '1', '🟩', '1', '3', '4', '111', '1', 'unknown'],
+  ['🗿', '2', '🟩', '2', '3', '4', '112', '2', 'unknown'],
+  ['🗿', '3', '🟩', '3', '3', '4', '113', '3', 'unknown'],
+  ['🗿', '4', '🟩', '4', '3', '4', '114', '2', 'unknown'],
+  ['🗿', '5', '🟩', '5', '3', '4', '115', '1', 'unknown'],
+  ['🗿', '6', '🟩', '6', '3', '4', '116', '1', 'unknown'],
+  ['🗿', '7', '🟩', '7', '3', '4', '117', '2', 'unknown'],
+  ['🗿', '8', '🟩', '8', '3', '4', '118', '3', 'unknown'],
+  ['🗿', '9', '🟩', '9', '3', '4', '119', '4', 'unknown'],
+  ['🔥', 'X', '🖤', '0', '1', '5', '120', '5', 'yes'],
+  ['🔥', 'J', '🖤', '1', '1', '5', '121', '1', 'yes'],
+  ['🔥', 'Q', '🖤', '2', '1', '5', '122', '2', 'yes'],
+  ['🔥', 'K', '🖤', '3', '1', '5', '123', '3', 'yes'],
+  ['🔥', 'A', '🖤', '4', '1', '5', '124', '4', 'yes'],
+  ['🍊', 'X', '🖤', '5', '1', '5', '125', '5', 'yes'],
+  ['🍊', 'J', '🖤', '6', '1', '5', '126', '1', 'yes'],
+  ['🍊', 'Q', '🖤', '7', '1', '5', '127', '2', 'yes'],
+  ['🍊', 'K', '🖤', '8', '1', '5', '128', '3', 'yes'],
+  ['🍊', 'A', '🖤', '9', '1', '5', '129', '4', 'yes'],
+  ['💧', 'X', '⚫️', '0', '2', '5', '130', '5', 'no'],
+  ['💧', 'J', '⚫️', '1', '2', '5', '131', '1', 'no'],
+  ['💧', 'Q', '⚫️', '2', '2', '5', '132', '2', 'no'],
+  ['💧', 'K', '⚫️', '3', '2', '5', '133', '3', 'no'],
+  ['💧', 'A', '⚫️', '4', '2', '5', '134', '4', 'no'],
+  ['🍆', 'X', '⚫️', '5', '2', '5', '135', '5', 'no'],
+  ['🍆', 'J', '⚫️', '6', '2', '5', '136', '1', 'no'],
+  ['🍆', 'Q', '⚫️', '7', '2', '5', '137', '2', 'no'],
+  ['🍆', 'K', '⚫️', '8', '2', '5', '138', '3', 'no'],
+  ['🍆', 'A', '⚫️', '9', '2', '5', '139', '4', 'no'],
+  ['⭐', 'X', '⬛️', '0', '3', '5', '140', '5', 'yes'],
+  ['⭐', 'J', '⬛️', '1', '3', '5', '141', '1', 'yes'],
+  ['⭐', 'Q', '⬛️', '2', '3', '5', '142', '2', 'yes'],
+  ['⭐', 'K', '⬛️', '3', '3', '5', '143', '3', 'yes'],
+  ['⭐', 'A', '⬛️', '4', '3', '5', '144', '4', 'yes'],
+  ['💭', 'X', '⬛️', '5', '3', '5', '145', '5', 'yes'],
+  ['💭', 'J', '⬛️', '6', '3', '5', '146', '1', 'yes'],
+  ['💭', 'Q', '⬛️', '7', '3', '5', '147', '2', 'yes'],
+  ['💭', 'K', '⬛️', '8', '3', '5', '148', '3', 'yes'],
+  ['💭', 'A', '⬛️', '9', '3', '5', '149', '4', 'yes'],
+  ['🍀', 'X', '🌈', '0', '4', '6', '150', '5', 'no'],
+  ['🍀', 'J', '🌈', '1', '4', '6', '151', '1', 'no'],
+  ['🍀', 'Q', '🌈', '2', '4', '6', '152', '2', 'no'],
+  ['🍀', 'K', '🌈', '3', '4', '6', '153', '3', 'no'],
+  ['🍀', 'A', '🌈', '4', '4', '6', '154', '4', 'no'],
+  ['🕷️', 'X', '🌈', '5', '4', '6', '155', '5', 'no'],
+  ['🕷️', 'J', '🌈', '6', '4', '6', '156', '1', 'no'],
+  ['🕷️', 'Q', '🌈', '7', '4', '6', '157', '2', 'no'],
+  ['🕷️', 'K', '🌈', '8', '4', '6', '158', '3', 'no'],
+  ['🕷️', 'A', '🌈', '9', '4', '6', '159', '4', 'no'],
 ] satisfies string[][]
 ---
 
@@ -214,6 +216,8 @@ const rows = [
             >
               {i === 0 || i === 2 ? (
                 <Suit emoji={cell as SuitProps['emoji']} />
+              ) : i === 8 ? (
+                <CoinFlip id={cell as CoinFlipProps['id']} />
               ) : (
                 cell
               )}
